--- a/AppContatos/app/src/main/res/values/strings.xml
+++ b/AppContatos/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">AppContatos</string>
+    <string name="contacts">Contatos</string>
+    <string name="loading_contacts">Carregando seus contatos...</string>
+    <string name="loading_error">Erro ao carregar</string>
+    <string name="wait_and_try_again">Aguarde um momento e tente novamente</string>
+    <string name="try_again">Tentar novamente</string>
+    <string name="no_data">Nada por aqui...</string>
+    <string name="no_data_hint">Você ainda não adicionou nenhum contato.\nAdicione o primeiro utilizando o botão \"Novo contato\"</string>
 </resources>
