Criados os componentes DefaultErrorContent e DefaultLoadingContent

--- a/AppContatos/app/src/main/res/values/strings.xml
+++ b/AppContatos/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="texto">Texto</string>
     <string name="video">Vídeo</string>
     <string name="email">E-mail</string>
+    <string name="carregando">Carregando...</string>
 </resources>
